--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,15 @@
 {
-	"name": "mazepress/skeleton",
+	"name": "mazepress/post",
 	"type": "wordpress-plugin",
-	"description": "A custom WordPress plugin.",
+	"description": "A package library for managing custom post type.",
 	"license": "MIT",
-	"repositories": [
-        {
-            "type": "composer",
-            "url": "https://mazepress.github.io/packagist"
-        }
-    ],
 	"require": {
 		"php": "^7.4 | ^8.0",
 		"automattic/jetpack-autoloader": "^2.12",
-		"composer/installers": "^2.2",
-		"mazepress/core": "dev-main"
+		"composer/installers": "^2.2"
 	},
 	"require-dev": {
 		"phpcompatibility/phpcompatibility-wp": "^2.1.4",
-		"wp-cli/i18n-command": "^2.5",
 		"wp-coding-standards/wpcs": "^3.0.1",
 		"dealerdirect/phpcodesniffer-composer-installer": "^1.0",
 		"szepeviktor/phpstan-wordpress": "^1.3.2",
@@ -27,24 +19,19 @@
 	},
 	"scripts": {
 		"phpcs": "./vendor/bin/phpcs --standard=phpcs.xml",
-		"phpcbf": "./vendor/bin/phpcbf src tests templates skeleton.php",
+		"phpcbf": "./vendor/bin/phpcbf src tests",
 		"phpstan": "./vendor/bin/phpstan analyse -c phpstan.neon --memory-limit 2G",
 		"phpunit": "./vendor/bin/phpunit --configuration phpunit.xml",
-		"coverage": "./vendor/bin/code-coverage ./build/clover.xml 90",
-		"make:pot": "./vendor/bin/wp i18n make-pot . ./languages/skeleton.pot --include='src,templates,skeleton.php'",
-		"make:mo": "./vendor/bin/wp i18n make-mo ./languages/skeleton.pot'",
-		"update:po": "./vendor/bin/wp i18n update-po ./languages/skeleton.pot'",
-		"post-install-cmd": "composer dump-autoload",
-		"post-update-cmd": "composer dump-autoload"
+		"coverage": "./vendor/bin/code-coverage ./build/clover.xml 90"
 	},
 	"autoload": {
 		"psr-4": {
-			"Mazepress\\Skeleton\\": "src"
+			"Mazepress\\Post\\": "src"
 		}
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"Mazepress\\Skeleton\\Tests\\": "tests"
+			"Mazepress\\Post\\Tests\\": "tests"
 		}
 	},
 	"prefer-stable": true,
@@ -56,11 +43,6 @@
 			"composer/installers": true,
 			"automattic/jetpack-autoloader": true,
 			"dealerdirect/phpcodesniffer-composer-installer": true
-		}
-	},
-	"extra": {
-		"installer-paths": {
-			"packages/{$name}/": ["type:wordpress-plugin"]
 		}
 	}
 }
