Fixed parameter default

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,12 @@
 		"teqnomaze/code-coverage": "^1.0"
 	},
 	"scripts": {
+    "testall": [
+      "@phpcs",
+      "@phpstan",
+      "@phpunit",
+      "@coverage"
+    ],
 		"phpcs": "./vendor/bin/phpcs --standard=phpcs.xml",
 		"phpcbf": "./vendor/bin/phpcbf src tests",
 		"phpstan": "./vendor/bin/phpstan analyse -c phpstan.neon --memory-limit 2G",
